--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,12 @@
 <resources>
     <string name="app_name">AD 340</string>
+    <string name="forecast_details">Forecast Details</string>
+
+    <string name="zipcode_entry_error">Please Enter Valid Zipcode</string>
+
+    <string name="forecast_clicked_format">Forecast: %1$.2f %2$s</string>
+
+    <string name="menu_display_units">Display Units</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
