--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">AD 340</string>
+    <string name="app_name">AD 340 Weather</string>
     <string name="forecast_details">Forecast Details</string>
 
     <string name="zipcode_entry_error">Please Enter Valid Zipcode</string>
@@ -9,4 +9,7 @@
     <string name="menu_display_units">Display Units</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+
+    <string name="bottom_nav_label_today">Today</string>
+    <string name="bottom_nav_label_weekly">Weekly</string>
 </resources>
